[project]
name = "langchain-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distro==1.9.0",
    "dotenv==0.9.9",
    "jiter==0.13.0",
    "langchain==1.2.10",
    "langchain-deepseek==1.0.1",
    "langchain-neo4j>=0.8.0",
    "langchain-openai==1.1.10",
    "neo4j>=6.1.0",
    "openai==2.24.0",
    "python-dotenv==1.2.2",
    "regex==2026.2.28",
    "sniffio==1.3.1",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
]
